[package]
name = "antegen-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Antegen - Solana automation and scheduling"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["solana", "automation", "scheduler", "blockchain"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
readme = "README.md"

[[bin]]
name = "antegen"
path = "src/main.rs"

[dependencies]
antegen-client = { version = "4.1.1", path = "../client" }
antegen-thread-program = { version = "4.1.1", path = "../../programs/thread", features = [
  "cpi",
] }
anchor-lang = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
loa-core = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
solana-sdk = { workspace = true }
solana-cli-config = { workspace = true }
solana-system-interface = { workspace = true }
reqwest = { workspace = true }
shellexpand = { workspace = true }
toml = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }
service-manager = "0.10"
self_update = { version = "0.42", default-features = false, features = ["rustls"] }

[target.'cfg(unix)'.dependencies]
file-owner = "0.1"
libc = "0.2"

[build-dependencies]

[features]
dev = []
prod = []  # Production mode - no dev build detection

[dev-dependencies]
tempfile = { workspace = true }
