[package]
name = "antegen-client"
version = "4.0.0"
authors = ["Antegen Maintainers <maintainers@antegen.xyz>"]
edition = "2021"
license = "MIT"
description = "Client library for Antegen - Solana automation executor"
repository = "https://github.com/wuwei-labs/antegen"
homepage = "https://antegen.xyz/"
documentation = "https://docs.antegen.xyz/"
keywords = ["solana", "automation", "executor"]
readme = "../../README.md"

[dependencies]
# Internal crates
antegen-thread-program = { version = "4.0.0", path = "../../programs/thread", features = ["cpi"] }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
dashmap = { workspace = true }
moka = { workspace = true }

# Ractor for actor framework
ractor = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
futures = { workspace = true }

# Hashing for deduplication
seahash = { workspace = true }
shellexpand = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-account-decoder = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-system-interface = { workspace = true }
bs58 = { workspace = true }
anchor-lang = { workspace = true }

# Observability
loa-core = { workspace = true }

# HTTP client for raw RPC calls (simulateTransaction with account response)
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# Efficient synchronization primitives
parking_lot = "0.12"

# Error handling
thiserror = "1.0"

# Persistent WebSocket connections
pws = "0.1"

# Compression for RPC responses
zstd = "0.13"

# TPU client for direct validator transaction submission
solana-tpu-client-next = { workspace = true }
solana-rpc-client = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
