[package]
name = "antegen-observer"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
description = "Antegen observer for monitoring and claiming thread execution"

[dependencies]
antegen-thread-program = { workspace = true, features = ["cpi"] }

anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-account-decoder = { workspace = true }
solana-rpc-client-nonce-utils = { workspace = true }

log = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
hex = { workspace = true }
bincode = { workspace = true }

# Import types from submitter
antegen-submitter = { workspace = true }