[package]
name = "antegen-processor"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
description = "Antegen thread processor - core business logic for thread execution"

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }

tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
log = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
antegen-sdk = { workspace = true }
antegen-thread-program = { workspace = true }
antegen-submitter = { workspace = true }
anchor-lang = { workspace = true }
dashmap = { workspace = true }


# Metrics (always enabled)
opentelemetry = { workspace = true }
