[package]
name = "antegen-submitter"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
description = "Antegen transaction submission library with RPC, TPU, and replay support"

[dependencies]
# Solana dependencies
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-quic-client = { workspace = true }
solana-rpc-client-nonce-utils = { workspace = true }
solana-account-decoder = { workspace = true }

# Anchor for account deserialization
anchor-lang = { workspace = true }
antegen-thread-program = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Utilities
anyhow = { workspace = true }
log = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }

# Caching
moka = { workspace = true }

# NATS for replay functionality
async-nats = { workspace = true }

# Metrics
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }