[package]
name = "antegen-submitter"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
description = "Antegen transaction submission library with RPC, TPU, and replay support"

[dependencies]
# Solana dependencies
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-quic-client = { workspace = true }
solana-rpc-client-nonce-utils = { workspace = true }
solana-account-decoder = { workspace = true }

# Removed unused anchor dependencies
antegen-sdk = { workspace = true }

# Internal dependencies (none - to avoid circular deps)

# Async runtime
tokio = { workspace = true }

# Utilities
anyhow = { workspace = true }
crossbeam = { workspace = true }
log = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }

# Removed unused moka caching

# TODO: Add message queue client for replay functionality
# Options: NATS, Kafka, Redis, etc.

# Metrics
opentelemetry = { workspace = true }