[package]
name = "antegen-geyser-plugin"
version = "5.0.5"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Geyser plugin for Antegen - Solana automation executor"
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
antegen-client = { workspace = true }
agave-geyser-plugin-interface = { workspace = true }
solana-logger = { workspace = true }
solana-program = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
