[package]
name = "antegen-plugin-utils"
description = "Antegen Plugin Utils"

version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "antegen_plugin_utils"

[dependencies]
agave-geyser-plugin-interface = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
