[package]
name = "clockwork-plugin-utils"
version = "1.0.0"
edition = "2021"
description = "Clockwork Plugin Utils"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.wuwei.dev"
repository = "https://github.com/wuwei-labs/clockwork"
documentation = "https://clockwork.wuwei.dev/docs"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_plugin_utils"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
agave-geyser-plugin-interface = "2.1.6"
