[package]
name = "clockwork-network-program"
version = "1.0.0"
edition = "2021"
description = "Clockwork networking protocol"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.wuwei.dev"
repository = "https://github.com/wuwei-labs/clockwork"
documentation = "https://clockwork.wuwei.dev/docs"
readme = "./README.md"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_network_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
clockwork-utils = { path = "../../utils", version = "=1.0.0" }

anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "0453672" }
anchor-spl = { features = ["mint", "token"], git = "https://github.com/coral-xyz/anchor", rev = "0453672" }
winnow = "=0.4.1"
toml_datetime = "=0.6.8"
