[package]
name = "antegen-network-program"
description = "Antegen networking protocol"

version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[lib]
name = "antegen_network_program"
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
 
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[features]
mainnet = []
default = []
anchor-debug = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
antegen-utils = { workspace = true }

anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

winnow = { workspace = true }
toml_datetime = { workspace = true }
