[package]
name = "antegen-network-program"
description = "Antegen networking protocol"
publish = false

version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[lib]
name = "antegen_network_program"
crate-type = ["cdylib", "lib"]


[features]
default = []
anchor-debug = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-log-ix-name = []

[dependencies]
antegen-utils = { workspace = true }

anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
