[package]
name = "antegen-test-program"
description = "Used to test Antegen"

version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[lib]
name = "antegen_test_program"
crate-type = ["cdylib", "lib"]

[features]
anchor-debug = []
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-log-ix-name = []

[dependencies]
antegen-utils = { workspace = true }

anchor-lang = { workspace = true, features = ["init-if-needed"]}
anchor-spl = { workspace = true }
