[package]
name = "antegen-thread-program"
description = "Antegen thread program"
publish = false

version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[lib]
name = "antegen_thread_program"
crate-type = ["cdylib", "lib"]

[features]
default = []
anchor-debug = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-log-ix-name = []
no-idl = []

[dependencies]
solana-cron = { workspace = true }
anchor-lang = { workspace = true, features = ["init-if-needed"] }
chrono = { workspace = true }
