[package]
name = "antegen-thread-program"
description = "Solana program for Antegen - automation and scheduling threads"
version = "4.0.0"
authors = ["Antegen Maintainers <maintainers@antegen.xyz>"]
repository = "https://github.com/wuwei-labs/antegen"
homepage = "https://antegen.xyz/"
documentation = "https://docs.antegen.xyz/"
license = "MIT"
edition = "2021"
readme = "../../README.md"
keywords = ["solana", "automation", "scheduler", "blockchain", "anchor"]

[lib]
name = "antegen_thread_program"
crate-type = ["cdylib", "lib"]

[features]
default = []
anchor-debug = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-log-ix-name = []
no-idl = []

[dependencies]
antegen-cron = { version = "4.0.0", path = "../../crates/cron" }
solana-nonce = { workspace = true }
anchor-lang = { workspace = true, features = ["init-if-needed"] }
chrono = { workspace = true }
