[package]
name = "antegen-thread-program"
description = "Solana program for Antegen - automation and scheduling threads"
version = "5.0.11"
authors = ["Antegen Maintainers <maintainers@antegen.xyz>"]
repository = "https://github.com/wuwei-labs/antegen"
homepage = "https://antegen.xyz/"
documentation = "https://docs.antegen.xyz/"
license = "MIT"
edition = "2021"
readme = "../../README.md"
keywords = ["solana", "automation", "scheduler", "blockchain", "anchor"]

[lib]
name = "antegen_thread_program"
crate-type = ["cdylib", "lib"]

[features]
default = []
anchor-debug = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-log-ix-name = []
no-idl = []
custom-heap = []
custom-panic = []

[dependencies]
antegen-cron = { workspace = true }
antegen-fiber-program = { workspace = true }
solana-nonce = { workspace = true }
anchor-lang = { workspace = true, features = ["init-if-needed"] }
chrono = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(target_os, values("solana"))',
] }

[dev-dependencies]
litesvm = { git = "https://github.com/wuwei-labs/litesvm.git", branch = "fix/durable-nonce-slot-warp" }
litesvm-token = { git = "https://github.com/wuwei-labs/litesvm.git", branch = "fix/durable-nonce-slot-warp" }
solana-sdk = { workspace = true }
solana-system-interface = { workspace = true }
anchor-lang = { workspace = true }
borsh = { workspace = true }
